# sysfind-application

./: PKGBUILD-bin  PKGBUILD-git  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  lib.rs  main.rs
src/lib/: download.js  fetch.js  model.js
src/lib/components/: Downloader.svelte  FuzzySearch.svelte  ImageDownloadButton.svelte  Navbar.svelte  OsListItem.svelte  OsViewer.svelte  TheButtonThatLaunchesHalfLife.svelte
src/routes/: +page.svelte
src/routes/view/[slug]/: +page.js  +page.svelte
