[package]
name = "sysfind-application"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sysfind_application_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tauri-plugin-fs = "2"
tokio = {version = "1.50.0", features = ["rt-multi-thread", "macros", "fs", "sync"] }
reqwest = { version = "0.13", features = ["stream"] }
futures = "0.3.32"
futures-util = "0.3.32"
sha2 = "0.10.9"
hex = "0.4.3"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"

